fix: text alignment

--- a/src/style.css
+++ b/src/style.css
@@ -54,7 +54,7 @@ p.customfont {
 
 .pb{
     position: absolute;
-    top: 21.5%;
+    top: 20.5%;
     left: 3.3%;
     width: 25%;
     height: 10%;
